--- a/ros_ws/src/bearmax_description/package.xml
+++ b/ros_ws/src/bearmax_description/package.xml
@@ -11,6 +11,10 @@
 
   <depend>urdf</depend>
 
+  <exec_depend>joint_state_publisher_gui</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>rviz2</exec_depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
