Add more package boilerplate

--- a/ros_ws/src/bearmax_msgs/CMakeLists.txt
+++ b/ros_ws/src/bearmax_msgs/CMakeLists.txt
@@ -15,6 +15,9 @@ find_package(std_msgs REQUIRED)
 
 set(msg_files
   "msg/Foobar.msg"
+  "msg/StackCommand.msg"
+  "msg/WSPSensorDataRaw.msg"
+  "msg/StressValue.msg"
 )
 
 set(srv_files
