Add emotion detection & game submodule and setup bearmax_emotion package

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "ros_ws/src/bearmax_analysis/bearmax_analysis/pyEDA"]
 	path = ros_ws/src/bearmax_analysis/bearmax_analysis/pyEDA
 	url = https://github.com/HealthSciTech/pyEDA.git
+[submodule "ros_ws/src/bearmax_emotion/bearmax_emotion/emotion_lib"]
+	path = ros_ws/src/bearmax_emotion/bearmax_emotion/emotion_lib
+	url = ../../ElijahMSmith/Senior-Design-Emotion-Game.git
+	branch = master
