Import robot model from solidworks sans head as rough urdf and add joints to ros2_control

--- a/ros_ws/src/bearmax_description/CMakeLists.txt
+++ b/ros_ws/src/bearmax_description/CMakeLists.txt
@@ -14,7 +14,7 @@ find_package(urdf REQUIRED)
 
 # Install
 install(
-  DIRECTORY config gazebo launch ros2_control urdf
+  DIRECTORY config launch meshes textures urdf
   DESTINATION share/${PROJECT_NAME}
 )
 
