--- a/ros_ws/src/bearmax_description/package.xml
+++ b/ros_ws/src/bearmax_description/package.xml
@@ -10,6 +10,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>urdf</depend>
+  <depend>gazebo</depend>
 
   <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
