--- a/ros_ws/src/bearmax_description/CMakeLists.txt
+++ b/ros_ws/src/bearmax_description/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(ament_cmake REQUIRED)
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 find_package(urdf REQUIRED)
+find_package(bearmax_hardware REQUIRED)
 
 # Install
 install(
