--- a/ros_ws/src/bearmax_description/package.xml
+++ b/ros_ws/src/bearmax_description/package.xml
@@ -11,10 +11,12 @@
 
   <depend>urdf</depend>
   <depend>gazebo</depend>
+  <depend>bearmax_hardware</depend>
 
   <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rviz2</exec_depend>
+  <exec_depend>controller_manager</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
