--- a/ros_ws/src/bearmax_emotion/package.xml
+++ b/ros_ws/src/bearmax_emotion/package.xml
@@ -12,6 +12,8 @@
   <depend>python-tensorflow-pip</depend>
   <depend>python3-scipy</depend>
 
+  <exec_depend>v4l2_camera</exec_depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
