--- a/ros_ws/src/bearmax_bringup/package.xml
+++ b/ros_ws/src/bearmax_bringup/package.xml
@@ -9,10 +9,8 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend>bearmax_description</exec_depend>
-  <exec_depend>rviz2</exec_depend>
-  <exec_depend>xacro</exec_depend>
+  <exec_depend>bearmax_moveit</exec_depend>
+  <exec_depend>bearmax_emotion</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
