Basic implementation of emotion game node, sans game controls and task execution

--- a/ros_ws/src/bearmax_tasks/CMakeLists.txt
+++ b/ros_ws/src/bearmax_tasks/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(bearmax_msgs)
+project(bearmax_tasks)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -7,35 +7,26 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
-find_package(rosidl_default_generators REQUIRED)
-find_package(std_msgs REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_action REQUIRED)
+find_package(bearmax_msgs REQUIRED)
+find_package(bearmax_moveit REQUIRED)
 
-set(msg_files
-  "msg/StackCommand.msg"
-  "msg/WSPSensorDataRaw.msg"
-  "msg/StressValue.msg"
-  "msg/Emotion.msg"
-  "msg/EmotionGameState.msg"
-  "msg/EmotionScores.msg"
+add_executable(bearmax_tasks src/bearmax_tasks.cpp)
+target_include_directories(bearmax_tasks PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>)
+target_compile_features(bearmax_tasks PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
+ament_target_dependencies(
+  bearmax_tasks
+  "rclcpp"
+  "rclcpp_action"
+  "bearmax_msgs"
+  "bearmax_moveit"
 )
 
-set(srv_files
-  "srv/Foobar.srv"
-)
-
-set(action_files
-  "action/Task.action"
-)
-
-rosidl_generate_interfaces(${PROJECT_NAME}
-  ${msg_files}
-  ${srv_files}
-  ${action_files}
-  DEPENDENCIES std_msgs
-)
+install(TARGETS bearmax_tasks
+  DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
