--- a/ros_ws/src/bearmax_moveit_config/config/ros2_controllers.yaml
+++ b/ros_ws/src/bearmax_moveit_config/config/ros2_controllers.yaml
@@ -31,6 +31,9 @@ controller_manager:
       type: joint_trajectory_controller/JointTrajectoryController
 
 
+    all_controller:
+      type: joint_trajectory_controller/JointTrajectoryController
+
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
@@ -103,6 +106,27 @@ body_controller:
       - head_platform_pitch_joint
       - head_platform_roll_joint
       - head_platform_yaw_joint
+    command_interfaces:
+      - position
+    state_interfaces:
+      - position
+all_controller:
+  ros__parameters:
+    joints:
+      - chassis_joint
+      - head_platform_pitch_joint
+      - head_platform_roll_joint
+      - head_platform_yaw_joint
+      - left_ear_rotator_joint
+      - left_ear_pitch_joint
+      - right_ear_rotator_joint
+      - right_ear_pitch_joint
+      - left_arm_shoulder_joint
+      - left_arm_rotator_joint
+      - left_arm_elbow_joint
+      - right_arm_shoulder_joint
+      - right_arm_rotator_joint
+      - right_arm_elbow_joint
     command_interfaces:
       - position
     state_interfaces:
