--- a/ros_ws/src/bearmax_emotion/package.xml
+++ b/ros_ws/src/bearmax_emotion/package.xml
@@ -18,6 +18,7 @@
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>visualization_msgs</depend>
   <depend>bearmax_msgs</depend>
 
   <exec_depend>v4l2_camera</exec_depend>
