--- a/ros_ws/src/bearmax_moveit/package.xml
+++ b/ros_ws/src/bearmax_moveit/package.xml
@@ -10,8 +10,11 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>moveit_ros_planning_interface</depend>
+  <depend>bearmax_msgs</depend>
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
+  <depend>trajectory_msgs</depend>
+  <depend>std_srvs</depend>
   <depend>geometry_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
