Add production docker stuff

--- a/ros_ws/Dockerfile
+++ b/ros_ws/Dockerfile
@@ -1,20 +1,59 @@
-FROM ros:humble
+# FROM nvcr.io/nvidia/l4t-tensorflow:r35.2.1-tf2.11-py3 as tensorflow
+FROM docker pull dustynv/ros:humble-pytorch-l4t-r35.2.1
 
-RUN groupadd -g 1000 ros && \
-    useradd -m -u 1000 -g ros -G sudo ros && \
-    echo "ros:ros" | chpasswd && \
-    apt-get update && \
-    echo ". /opt/ros/humble/setup.bash" >> /etc/profile
+# 
+# add the ROS deb repo to the apt sources list
+#
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+		curl \
+		wget \
+		gnupg2 \
+		lsb-release \
+		ca-certificates \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
-USER ros
+RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
+RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null
 
-RUN mkdir -p /home/ros/.ros && \
-    mkdir -p /home/ros/.rviz2 && \
-    mkdir -p /home/ros/ros_ws && \
-    echo ". /opt/ros/humble/setup.bash" >> /home/ros/.bashrc && \
-    echo "export RMW_IMPLEMENTATION=rmw_cyclonedds_cpp" >> /home/ros/.bashrc
+# Bring over our code
+RUN mkdir -p /ros_ws
+WORKDIR /ros_ws
 
-# TODO: Install dependencies and ensure is ready and able to be run on robot
+COPY . .
 
-#RUN apt-get update && rosdep install -y
+# install dependencies using rosdep
+RUN apt-get update && \
+    apt-get install -y python3-pip && \
+    pip3 install -U jetson-stats && \
+    rosdep init && \
+    rosdep update && \
+    rosdep install -i \
+    --from-path src \
+    --rosdistro humble -yr
 
+# Fix imutils bug
+RUN cd "$(pip show imutils | grep Location | awk '{ print $2 }')/imutils/face_utils" && \
+    sed -i 's@eyesCenter =.*@eyesCenter = (float((leftEyeCenter[0] + rightEyeCenter[0]) // 2),@;s@(leftEyeCenter\[1\] + rightEyeCenter\[1\]) // 2)@float((leftEyeCenter[1] + rightEyeCenter[1]) // 2))@' facealigner.py && \
+    cd -
+
+# Build Bearmax ROS
+RUN . /opt/ros/humble/setup.sh && \
+    colcon build --symlink-install \
+    --cmake-args \
+    -DCMAKE_BUILD_TYPE=Release
+
+
+# source ros from entrypoint
+RUN sed --in-place --expression \
+    '$isource "/ros_ws/install/setup.bash"' \
+    /ros_entrypoint.sh
+
+
+ENTRYPOINT ["/ros_entrypoint.sh"]
+
+STOPSIGNAL SIGINT
+
+# run main ros launch file
+CMD ["ros2", "launch", "bearmax_bringup", "bearmax.launch.py"]
