--- a/ros_ws/src/bearmax_moveit_config/config/joint_limits.yaml
+++ b/ros_ws/src/bearmax_moveit_config/config/joint_limits.yaml
@@ -11,70 +11,70 @@ joint_limits:
   chassis_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
   head_platform_pitch_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
   head_platform_roll_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
   head_platform_yaw_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
   left_arm_elbow_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
   left_arm_rotator_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
   left_arm_shoulder_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
   left_ear_pitch_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
   left_ear_rotator_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
   right_arm_elbow_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
   right_arm_rotator_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
   right_arm_shoulder_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
   right_ear_pitch_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
   right_ear_rotator_joint:
     has_velocity_limits: true
     max_velocity: 100.0
-    has_acceleration_limits: false
-    max_acceleration: 0
+    has_acceleration_limits: true
+    max_acceleration: 20.0
