--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,15 +18,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.docker_image_name }}
-          tags: |
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=ref,event=tag
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
@@ -43,11 +34,19 @@ jobs:
         with:
           context: .
           push: ${{ github.actor != 'dependabot[bot]' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: "${{ env.docker_image_name }}:latest"
           platforms: linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - name: Docker Image digest
         run: |
           echo ${{ steps.docker_build.outputs.digest }}
+      - name: Save Docker Image
+        run: |
+          docker save -o bearmax.img "${{ env.docker_image_name }}:latest"
+      - name: Upload Image artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: bearmax.img
+          path: bearmax.img
+
