--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          submodules: true
+          submodules: recursive
+          ssh-key: ${{ secrets.SSH_KEY }}
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
